# python-movie-api-example

./: .flake8  README.md  pyproject.toml  settings.py
tests/: conftest.py  test_account.py  test_discover.py  test_setup.py
tmdb/: account.py  discover.py
tmdb/models/: media.py
